[puppet_installer] updated to support puppet v4.x