@@ -1,13 +1,12 @@
 #!/bin/bash
 #
 # Author:: Ashrith Mekala (<ashrith@cloudwick.com>)
-# Description:: Script to install puppet server/client
+# Description:: Script to install puppet server/client v4.x
 #               * puppetdb for stored configs
-#               * passenger for scaling puppet server
 #               * postgresql (dependency for puppetdb)
-#               * autosigning for puppet clients belonging to same domain
-# Supported OS:: CentOS, Redhat, Ubuntu
-# Version: 0.5
+#               * auto signing for puppet clients belonging to same domain
+# Supported OS:: CentOS 6/7, RedHat 6/7, Ubuntu precise/lucid/trusty
+# Version: 0.6
 #
 # Copyright 2013, Cloudwick, Inc.
 #
@@ -76,7 +75,7 @@ function print_info () {
 }
 
 function print_debug () {
-  if [[ $debug = "true" ]]; then
+  if [[ ${debug} = "true" ]]; then
     printf "%s %b[DEBUG]%b $*\n" "$(date +%s)" "${clr_cyan}" "${clr_end}"
   fi
 }
@@ -85,12 +84,12 @@ function execute () {
   local full_redirect="1>>$stdout_log 2>>$stderr_log"
   /bin/bash -c "$* $full_redirect"
   ret=$?
-  if [ $ret -ne 0 ]; then
+  if [ ${ret} -ne 0 ]; then
     print_debug "Executed command \'$*\', returned non-zero code: ${clr_yellow}${ret}${clr_end}"
   else
     print_debug "Executed command \'$*\', returned successfully."
   fi
-  return $ret
+  return ${ret}
 }
 
 function check_for_root () {
@@ -111,9 +110,9 @@ function get_system_info () {
     if [[ -f /etc/redhat-release ]]; then
       os_str=$( cat `ls /etc/*release | grep "redhat\|SuSE"` | head -1 | awk '{ for(i=1; i<=NF; i++) { if ( $i ~ /[0-9]+/ ) { cnt=split($i, arr, "."); if ( cnt > 1) { print arr[1] } else { print $i; } break; } print $i; } }' | tr '[:upper:]' '[:lower:]' )
       os_version=$( cat `ls /etc/*release | grep "redhat\|SuSE"` | head -1 | awk '{ for(i=1; i<=NF; i++) { if ( $i ~ /[0-9]+/ ) { cnt=split($i, arr, "."); if ( cnt > 1) { print arr[1] } else { print $i; } break; } } }' | tr '[:upper:]' '[:lower:]' )
-      if [[ $os_str =~ centos ]]; then
+      if [[ ${os_str} =~ centos ]]; then
         os="centos"
-      elif [[ $os_str =~ red ]]; then
+      elif [[ ${os_str} =~ red ]]; then
         os="redhat"
       else
         print_error "OS: $os_str is not yet supported, contact support@cloudwicklabs.com"
@@ -122,13 +121,10 @@ function get_system_info () {
     elif [[ -f /etc/lsb-release ]] ; then
       os_str=$( lsb_release -sd | tr '[:upper:]' '[:lower:]' | tr '"' ' ' | awk '{ for(i=1; i<=NF; i++) { if ( $i ~ /[0-9]+/ ) { cnt=split($i, arr, "."); if ( cnt > 1) { print arr[1] } else { print $i; } break; } print $i; } }' )
       os_version=$( lsb_release -sd | tr '[:upper:]' '[:lower:]' | tr '"' ' ' | awk '{ for(i=1; i<=NF; i++) { if ( $i ~ /[0-9]+/ ) { cnt=split($i, arr, "."); if ( cnt > 1) { print arr[1] } else { print $i; } break; } } }')
-      if [[ $os_str =~ ubuntu ]]; then
+      if [[ ${os_str} =~ ubuntu ]]; then
         os="ubuntu"
-        if grep -q precise /etc/lsb-release; then
-          os_codename="precise"
-        elif grep -q lucid /etc/lsb-release; then
-          os_codename="lucid"
-        else
+        os_codename=$( grep DISTRIB_CODENAME /etc/lsb-release | cut -d'=' -f2 )
+        if [[ "${os_codename}" != "precise" && "${os_codename}" != "lucid" && "${os_codename}" != "trusty" ]]; then
           print_error "Sorry, only precise & lucid systems are supported by this script. Exiting."
           exit 1
         fi
@@ -158,9 +154,13 @@ function get_system_info () {
     fi
   fi
 
-  if [[ $os =~ centos || $os =~ redhat ]]; then
+  if [[ ${os} =~ centos || ${os} =~ redhat ]]; then
+    if [[ ${os_version} -le 5 ]]; then
+      print_error "Unsupported os version. Please contact support@cloudwicklabs.com."
+      exit 1
+    fi
     package_manager="yum"
-  elif [[ $os =~ ubuntu ]]; then
+  elif [[ ${os} =~ ubuntu ]]; then
     package_manager="apt-get"
   else
     print_error "Unsupported package manager. Please contact support@cloudwicklabs.com."
@@ -179,7 +179,7 @@ function check_preqs () {
   print_info "Checking your system prerequisites..."
 
   for command in curl vim; do
-    type -P $command &> /dev/null || {
+    type -P ${command} &> /dev/null || {
       print_warning "Command $command not found"
       print_info "Attempting to install $command..."
       execute "${package_manager} -y install $command" # brew does not have -y
@@ -194,14 +194,10 @@ function add_epel_repo () {
   execute "ls -la /etc/yum.repos.d/*epel*"
   if [[ $? -ne 0 ]]; then
     print_info "Adding the EPEL repository to yum configuration..."
-    if [[ $os_version -eq 5 ]]; then
-      execute "curl -o epel.rpm -L http://download.fedoraproject.org/pub/epel/5/$os_arch/epel-release-5-4.noarch.rpm"
-      execute "rpm -i epel.rpm"
-      execute "rm -f epel.rpm"
-    elif [[ $os_version -eq 6 ]]; then
-      execute "curl -o epel.rpm -L http://download.fedoraproject.org/pub/epel/6/$os_arch/epel-release-6-8.noarch.rpm"
-      execute "rpm -i epel.rpm"
-      execute "rm -f epel.rpm"
+    if [[ ${os_version} -eq 6 ]]; then
+      execute "rpm -i http://download.fedoraproject.org/pub/epel/6/$os_arch/epel-release-6-8.noarch.rpm"
+    elif [[ ${os_version} -eq 7 ]]; then
+      execute "rpm -i http://dl.fedoraproject.org/pub/epel/7/$os_arch/e/epel-release-7-5.noarch.rpm"
     fi
   fi
 }
@@ -212,20 +208,49 @@ function add_puppetlabs_repo () {
       add_epel_repo
       if [[ ! -f /etc/yum.repos.d/puppetlabs.repo ]]; then
         print_info "Adding puppetlabs repo to yum repositories list..."
-        if [[ $os_version -eq 5 ]]; then
-          execute "rpm -i http://yum.puppetlabs.com/el/5/products/$os_arch/puppetlabs-release-5-10.noarch.rpm"
-        elif [[ $os_version -eq 6 ]]; then
-          execute "rpm -i http://yum.puppetlabs.com/el/6/products/$os_arch/puppetlabs-release-6-10.noarch.rpm"
+        if [[ ${os_version} -eq 6 ]]; then
+          execute "rpm -i https://yum.puppetlabs.com/puppetlabs-release-pc1-el-6.noarch.rpm"
+        elif [[ ${os_version} -eq 7 ]]; then
+          execute "rpm -i https://yum.puppetlabs.com/puppetlabs-release-pc1-el-7.noarch.rpm"
         fi
-        sed -i 's/gpgcheck=1/gpgcheck=0/g' /etc/yum.repos.d/puppetlabs.repo
+        sed -i 's/gpgcheck=1/gpgcheck=0/g' /etc/yum.repos.d/puppetlabs*.repo
       fi
       ;;
     ubuntu)
       if [[ ! -f /etc/apt/sources.list.d/puppetlabs.list ]]; then
         print_info "Adding puppetlabs repo to apt sources list"
-        execute "curl -sO http://apt.puppetlabs.com/puppetlabs-release-${os_codename}.deb"
+        execute "curl -sO https://apt.puppetlabs.com/puppetlabs-release-pc1-${os_codename}.deb"
         execute "dpkg -i puppetlabs-release-${os_codename}.deb"
         execute "rm -f puppetlabs-release-${os_codename}.deb"
+        print_info "Refreshing apt packages list..."
+        execute "apt-get update"
+      fi
+      ;;
+    *)
+      print_error "$os is not yet supported, please contact support@cloudwicklabs.com."
+      exit 1
+      ;;
+  esac
+}
+
+function add_postgres_repo () {
+  case "$os" in
+    centos|redhat)
+      if [[ ! -f /etc/yum.repos.d/pgdg-95-redhat.repo ]]; then
+        print_info "Adding postgres repo to yum repositories list..."
+        if [[ ${os_version} -eq 6 ]]; then
+          execute "rpm -Uvh http://yum.postgresql.org/9.5/redhat/rhel-6-x86_64/pgdg-redhat95-9.5-2.noarch.rpm"
+        elif [[ ${os_version} -eq 7 ]]; then
+          execute "rpm -Uvh http://yum.postgresql.org/9.5/redhat/rhel-7-x86_64/pgdg-redhat95-9.5-2.noarch.rpm"
+        fi
+        sed -i 's/gpgcheck=1/gpgcheck=0/g' /etc/yum.repos.d/pgdg-95-redhat.repo
+      fi
+      ;;
+    ubuntu)
+      if [[ ! -f /etc/apt/sources.list.d/pgdg.list ]]; then
+        print_info "Adding postgres repo to apt sources list"
+        execute "echo deb http://apt.postgresql.org/pub/repos/apt/ ${os_codename}-pgdg main >> /etc/apt/sources.list.d/pgdg.list"
+        execute "wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | sudo apt-key add -"
         print_info "Refreshing apt packages list..."
         execute "apt-get update"
       fi
@@ -241,7 +266,13 @@ function stop_iptables () {
   case "$os" in
     centos|redhat)
       print_info "Stopping ip tables..."
-      execute "service iptables stop"
+      if [[ ${os_version} -eq 6 ]]; then
+        execute "service iptables stop"
+        execute "chkconfig iptables off"
+      elif [[ ${os_version} -eq 7 ]]; then
+        execute "service firewalld stop"
+        execute "systemctl disable firewalld"
+      fi
       ;;
     ubuntu)
       print_info "Disabling ufw..."
@@ -266,11 +297,11 @@ function check_if_postgres_is_installed () {
   print_info "Checking to see if postgres is installed..."
   case "$os" in
     centos|redhat)
-      execute "rpm -q postgresql-server"
+      execute "rpm -q postgresql95-server"
       return $?
       ;;
     ubuntu)
-      execute "dpkg --list | grep postgresql"
+      execute "dpkg --list | grep postgresql-9.5"
       return $?
       ;;
     *)
@@ -281,6 +312,7 @@ function check_if_postgres_is_installed () {
 }
 
 function install_postgres () {
+  add_postgres_repo
   check_if_postgres_is_installed
   if [[ $? -eq 0 ]]; then
     print_info "Package postgres is already installed. Skipping installation step."
@@ -289,16 +321,20 @@ function install_postgres () {
   print_info "Installing postgres..."
   case "$os" in
     centos|redhat)
-      execute "$package_manager install -y postgresql postgresql-server postgresql-devel"
+      execute "$package_manager install -y postgresql95 postgresql95-server postgresql95-contrib"
       if [[ $? -ne 0 ]]; then
         print_error "Failed installing postgresql-server, stopping."
         exit 1
       fi
-      print_info "Initalizing postgresql db..."
-      execute "service postgresql initdb"
+      print_info "Initializing postgresql db..."
+      if [[ ${os_version} -eq 6 ]]; then
+        execute "service postgresql-9.5 initdb"
+      else
+        execute "/usr/pgsql-9.5/bin/postgresql95-setup initdb"
+      fi
       ;;
     ubuntu)
-      execute "$package_manager install -y postgresql libpq-dev"
+      execute "$package_manager install -y postgresql-9.5 postgresql-contrib-9.5"
       if [[ $? -ne 0 ]]; then
         print_error "Failed installing postgresql, stopping."
         exit 1
@@ -315,27 +351,35 @@ function configure_postgres () {
   print_info "Configuring postgres..."
   case "$os" in
     centos|redhat)
-      local psql_config="/var/lib/pgsql/data/pg_hba.conf"
-      local psql_data_conf="/var/lib/pgsql/data/postgresql.conf"
+      local psql_config="/var/lib/pgsql/9.5/data/pg_hba.conf"
+      local psql_data_conf="/var/lib/pgsql/9.5/data/postgresql.conf"
       sed -e "s|local *all *postgres .*|local    all         postgres                   trust|g" \
           -e "s|local *all *all .*|local    all         all                   trust|g" \
           -e "s|host *all *all *127.0.0.1/32 .*|host    all         all        127.0.0.1/32           trust|g" \
           -e "s|host *all *all *::1/128 .*|host    all         all        ::1/128           trust|g" \
-          -i $psql_config
+          -i ${psql_config}
       execute "grep puppetdb $psql_config"
       if [[ $? -ne 0 ]]; then
         file_change="true"
-        echo 'host puppetdb puppetdb 0.0.0.0/0 trust' >> $psql_config
+        echo 'host puppetdb puppetdb 0.0.0.0/0 trust' >> ${psql_config}
       fi
       execute "grep \"listen_addresses = '0.0.0.0'\" $psql_data_conf"
       if [[ $? -ne 0 ]]; then
         file_change="true"
-        echo "listen_addresses = '0.0.0.0'" >> $psql_data_conf
+        echo "listen_addresses = '0.0.0.0'" >> ${psql_data_conf}
+      fi
+      if [[ "$file_change" = "true" ]]; then
+        print_info "Restarting postgresql to reload config"
+        if [[ $os_version -eq 6 ]]; then
+          execute "service postgresql-9.5 restart"
+        else
+          execute "systemctl restart postgresql-9.5"
+        fi
       fi
       ;;
     ubuntu)
-      local psql_config="/etc/postgresql/9.*/main/pg_hba.conf"
-      local psql_data_conf="/etc/postgresql/9.*/main/postgresql.conf"
+      local psql_config="/etc/postgresql/9.5/main/pg_hba.conf"
+      local psql_data_conf="/etc/postgresql/9.5/main/postgresql.conf"
       sed -e "s|local *all *postgres .*|local    all         postgres                   trust|g" \
           -e "s|local *all *all .*|local    all         all                   trust|g" \
           -e "s|host *all *all *127.0.0.1/32 .*|host    all         all        127.0.0.1/32           trust|g" \
@@ -351,36 +395,68 @@ function configure_postgres () {
         file_change="true"
         echo "listen_addresses = '0.0.0.0'" >> "$psql_data_conf"
       fi
+      if [[ "$file_change" = "true" ]]; then
+        print_info "Restarting postgresql to reload config"
+        execute "service postgresql restart"
+      fi
       ;;
     *)
     print_error "$os is not yet supported"
     exit 1
   esac
-  if [[ "$file_change" = "true" ]]; then
-    print_info "Restarting postgresql to reload config"
-    execute "service postgresql restart"
-  fi
 }
 
 function start_postgres () {
   local service
   local service_count
-  service="postgresql"
+  service="postgresql-9.5"
   service_count=$(pgrep -f postmaster | wc -l)
-  if [[ $service_count -gt 0 && "$force_restart" = "true" ]]; then
-    print_info "Restarting service $service..."
-    execute "service $service restart"
-  elif [[ $service_count -gt 0 ]]; then
-    print_info "Service $service is already running. Skipping start step."
-  else
-    print_info "Starting service $service..."
-    execute "service $service start"
-  fi
+  case "$os" in
+    centos|redhat)
+      if [[ ${os_version} -eq 6 ]]; then
+        if [[ ${service_count} -gt 0 && "$force_restart" = "true" ]]; then
+          print_info "Restarting service $service..."
+          execute "service $service restart"
+        elif [[ ${service_count} -gt 0 ]]; then
+          print_info "Service $service is already running. Skipping start step."
+        else
+          print_info "Starting service $service..."
+          execute "service $service start"
+          execute "chkconfig $service on"
+        fi
+      elif [[ ${os_version} -eq 7 ]]; then
+        if [[ ${service_count} -gt 0 && "$force_restart" = "true" ]]; then
+          print_info "Restarting service $service..."
+          execute "systemctl restart $service"
+        elif [[ ${service_count} -gt 0 ]]; then
+          print_info "Service $service is already running. Skipping start step."
+        else
+          print_info "Starting service $service..."
+          execute "systemctl start $service"
+          execute "systemctl enable $service"
+        fi
+      fi
+      ;;
+    ubuntu)
+      if [[ ${service_count} -gt 0 && "$force_restart" = "true" ]]; then
+        print_info "Restarting service $service..."
+        execute "service postgresql restart"
+      elif [[ ${service_count} -gt 0 ]]; then
+        print_info "Service $service is already running. Skipping start step."
+      else
+        print_info "Starting service $service..."
+        execute "service $service start"
+      fi
+      ;;
+    *)
+      print_error "$os is not supported"
+      exit 1
+  esac
 }
 
 function configure_postgres_users () {
-  sudo -u postgres psql template1 <<END 1>>$stdout_log 2>>$stderr_log
-create user puppetdb with password '$postgresql_password';
+  sudo -u postgres psql template1 <<END 1>>${stdout_log} 2>>${stderr_log}
+create user puppetdb with password '${postgresql_password}';
 create database puppetdb with owner puppetdb;
 END
 }
@@ -389,11 +465,11 @@ function check_if_puppet_server_is_installed () {
   print_info "Checking to see if puppet is installed..."
   case "$os" in
     centos|redhat)
-      execute "rpm -q puppet-server"
+      execute "rpm -q puppetserver"
       return $?
       ;;
     ubuntu)
-      execute "dpkg --list | grep puppetmaster"
+      execute "dpkg --list | grep puppetserver"
       return $?
       ;;
     *)
@@ -413,14 +489,14 @@ function install_puppet_server () {
   print_info "Installing puppet server package..."
   case "$os" in
     centos|redhat)
-      execute "$package_manager install -y puppet-server"
+      execute "$package_manager install -y puppetserver"
       if [[ $? -ne 0 ]]; then
         print_error "Failed installing puppet-server, stopping."
         exit 1
       fi
       ;;
     ubuntu)
-      execute "$package_manager install -y puppetmaster"
+      execute "$package_manager install -y puppetserver"
       if [[ $? -ne 0 ]]; then
         print_error "Failed installing puppetmaster, stopping."
         exit 1
@@ -433,52 +509,62 @@ function install_puppet_server () {
 }
 
 function configure_puppet_server () {
-  #local eth0_ip_address
-  local puppet_server_fqdn
-  #eth0_ip_address=$(ifconfig eth0 | grep 'inet addr:' | cut -d: -f2 | grep 'Bcast' | awk '{print $1}')
-  puppet_server_fqdn=$(hostname --fqdn)
+  local eth0_ip_address=$(ifconfig eth0 | grep 'inet addr:' | cut -d: -f2 | grep 'Bcast' | awk '{print $1}')
+  local puppet_server_fqdn=$(hostname --fqdn)
+  local puppet_server_config_file="/etc/puppetlabs/puppetserver/conf.d/puppetserver.conf"
+  local puppet_config_file="/etc/puppetlabs/puppet/puppet.conf"
 
-  cat > /etc/puppet/puppet.conf <<END
+  # TODO configure memory settings based on available system memory
+  case "$os" in
+    centos|redhat)
+      sed -e "s|JAVA_ARGS.*|JAVA_ARGS=\"-Xms2g -Xmx2g -XX:MaxPermSize=256m\"|" -i /etc/sysconfig/puppetserver
+      ;;
+    ubuntu)
+      sed -e "s|JAVA_ARGS.*|JAVA_ARGS=\"-Xms2g -Xmx2g -XX:MaxPermSize=256m\"|" -i /etc/default/puppetserver
+      ;;
+  esac
+
+  cat > ${puppet_config_file} <<END
 [main]
-  logdir = /var/log/puppet
-  rundir = /var/run/puppet
-  ssldir = \$vardir/ssl
-  server = $puppet_server_fqdn
+server = ${puppet_server_fqdn}
+certname = ${puppet_server_fqdn}
+environment = production
 
-[agent]
-  classdir = \$vardir/classes.txt
-  localconfig = \$vardir/localconfig
+[master]
+vardir = /opt/puppetlabs/server/data/puppetserver
+logdir = /var/log/puppetlabs/puppetserver
+rundir = /var/run/puppetlabs/puppetserver
+pidfile = /var/run/puppetlabs/puppetserver/puppetserver.pid
+codedir = /etc/puppetlabs/code
 
 END
 }
 
 function configure_autosign_certificates () {
-  local puppet_server_fqdn
-  puppet_server_fqdn=$(hostname --fqdn)
-  local domain_name
-  domain_name=$(echo "$puppet_server_fqdn" | cut -d "." -f 2-)
-  echo "*.${domain_name}" > /etc/puppet/autosign.conf
+  local puppet_server_fqdn=$(hostname --fqdn)
+  local domain_name=$(echo "$puppet_server_fqdn" | cut -d "." -f 2-)
+  echo "*.${domain_name}" > /etc/puppetlabs/puppet/autosign.conf
 }
 
 function start_puppet_server () {
   print_info "Starting puppet master service..."
-  execute "puppet resource service puppetmaster ensure=running"
+  execute "/opt/puppetlabs/bin/puppet resource service puppetserver ensure=running"
 }
 
 function stop_puppet_server () {
   print_info "Stopping puppet master service..."
-  execute "puppet resource service puppetmaster ensure=stopped"
+  execute "/opt/puppetlabs/bin/puppet resource service puppetmaster ensure=stopped"
 }
 
 function check_if_puppet_client_is_installed () {
   print_info "Checking to see if puppet agent is installed..."
   case "$os" in
     centos|redhat)
-      execute "rpm -q puppet"
+      execute "rpm -q puppet-agent"
       return $?
       ;;
     ubuntu)
-      execute "dpkg --list | grep puppet"
+      execute "dpkg --list | grep puppet-agent"
       return $?
       ;;
     *)
@@ -496,7 +582,7 @@ function install_puppet_client () {
   fi
   add_puppetlabs_repo
   print_info "Installing puppet agent package..."
-  execute "$package_manager install -y puppet"
+  execute "$package_manager install -y puppet-agent"
   if [[ $? -ne 0 ]]; then
     print_error "Failed installing puppet, stopping."
     exit 1
@@ -505,244 +591,31 @@ function install_puppet_client () {
 
 function configure_puppet_client () {
   print_info "Configuring puppet agent..."
-  cat > /etc/puppet/puppet.conf <<END
+  cat > /etc/puppetlabs/puppet/puppet.conf <<END
 [main]
-  logdir = /var/log/puppet
-  rundir = /var/run/puppet
-  ssldir = \$vardir/classes.txt
-  configtimeout = 600
-[agent]
-  classdir = \$vardir/classes.txt
-  localconfig = \$vardir/localconfig
-  server = $puppet_server_hostname
-  pluginsync = true
+server = ${puppet_server_hostname}
+environment = production
+runinterval = 1h
 END
 }
 
 function start_puppet_client () {
-  print_info "Setting up cron job to start puppet agent"
-  execute "puppet resource cron puppet-agent ensure=present user=root minute=30 command='/usr/bin/puppet agent --onetime --no-daemonize --splay'"
+  print_info "Starting puppet agent"
+  execute "/opt/puppetlabs/bin/puppet resource service puppet ensure=running enable=true"
 }
 
-function check_if_passenger_is_installed () {
-  print_info "Checking if passenger is already installed..."
-  execute "gem list | grep passenger"
-  return $?
+function setup_puppet_client_cron_job () {
+  print_info "Setting up cron job to start puppet agent"
+  execute "/opt/puppetlabs/bin/puppet resource cron puppet-agent ensure=present user=root minute=30 command='/opt/puppetlabs/bin/puppet agent --onetime --no-daemonize --splay --splaylimit 60'"
 }
 
 function test_puppet_run () {
   print_info "Executing test puppet run"
-  execute "puppet agent --test --noop"
+  execute "/opt/puppetlabs/bin/puppet agent --test"
   if [[ $? -eq 0 ]]; then
-    print_info "Sucessfully executed puppet run"
+    print_info "Successfully executed puppet run"
   else
     print_warning "Failed executing test puppet run"
-  fi
-}
-
-function install_dependencies_for_passenger () {
-  print_info "Installing dependencies for passenger..."
-  case "$os" in
-    centos|redhat)
-      execute "$package_manager -y install httpd httpd-devel ruby-devel rubygems mod_ssl.x86_64 curl-devel openssl-devel gcc-c++ zlib-devel make"
-      if [[ -f /etc/httpd/conf.d/ssl.conf ]]; then
-        execute "rm -f /etc/httpd/conf.d/ssl.conf"
-      fi
-      if [[ -f /etc/httpd/conf.d/welcome.conf ]]; then
-        execute "rm -f /etc/httpd/conf.d/welcome.conf"
-      fi
-      execute "chkconfig httpd on"
-      ;;
-    ubuntu)
-      execute "$package_manager -y install apache2 ruby1.8-dev rubygems libcurl4-openssl-dev libssl-dev zlib1g-dev apache2-prefork-dev libapr1-dev libaprutil1-dev"
-      execute "a2enmod ssl"
-      execute "a2enmod headers"
-      execute "update-rc.d -f puppetmaster remove"
-      ;;
-    *)
-      print_error "$os is not supported yet."
-      exit 1
-      ;;
-  esac
-}
-
-function install_passenger () {
-  check_if_passenger_is_installed
-  if [[ $? -eq 0 ]]; then
-    print_info "Gem passenger is already installed. Skipping installation step."
-    return
-  fi
-  install_dependencies_for_passenger
-  execute "gem install --no-rdoc --no-ri rack"
-  execute "gem install --no-rdoc --no-ri passenger --version=3.0.18"
-  if [[ $? -ne 0 ]]; then
-    print_error "Failed installing passenger gem, stopping."
-    exit 1
-  fi
-  print_info "Setting up passenger as apache module, this might take a while..."
-  case "$os" in
-    centos|redhat)
-      execute "/usr/bin/passenger-install-apache2-module -a"
-      ;;
-    ubuntu)
-      execute "/usr/local/bin/passenger-install-apache2-module -a"
-      ;;
-  esac
-}
-
-function configure_passenger () {
-  print_info "Configuring passenger..."
-  local puppet_server_fqdn
-  local puppet_server_fqdn_lowercase
-  local puppet_conf="/etc/puppet/puppet.conf"
-  local passenger_conf
-  local ruby_path
-  local ruby_exec
-  puppet_server_fqdn=$(hostname --fqdn)
-  puppet_server_fqdn_lowercase=$(echo "$puppet_server_fqdn" | tr '[:upper:]' '[:lower:]')
-  case "$os" in
-    centos|redhat)
-      passenger_conf="/etc/httpd/conf.d/puppet.conf"
-      ruby_path="/usr/lib/ruby"
-      ruby_exec="/usr/bin/ruby"
-      ;;
-    ubuntu)
-      passenger_conf="/etc/apache2/sites-available/puppetmasterd"
-      ruby_path="/var/lib"
-      ruby_exec="/usr/bin/ruby1.8"
-      ;;
-  esac
-  execute "grep ssl_client_header $puppet_conf"
-  if [[ $? -ne 0 ]]; then
-    cat >> $puppet_conf <<DELIM
-[master]
-  ssl_client_header = SSL_CLIENT_S_DN
-  ssl_client_verify_header = SSL_CLIENT_VERIFY
-DELIM
-  fi
-  cat > $passenger_conf <<DELIM
-# you probably want to tune these settings
-PassengerHighPerformance on
-PassengerMaxPoolSize 12
-PassengerPoolIdleTime 1500
-# PassengerMaxRequests 1000
-PassengerStatThrottleRate 120
-RackAutoDetect Off
-RailsAutoDetect Off
-
-Listen 8140
-
-<VirtualHost *:8140>
-        LoadModule passenger_module ${ruby_path}/gems/1.8/gems/passenger-3.0.18/ext/apache2/mod_passenger.so
-        PassengerRoot ${ruby_path}/gems/1.8/gems/passenger-3.0.18
-        PassengerRuby ${ruby_exec}
-        LoadModule ssl_module modules/mod_ssl.so
-
-        SSLEngine on
-        SSLProtocol -ALL +SSLv3 +TLSv1
-        SSLCipherSuite ALL:!ADH:RC4+RSA:+HIGH:+MEDIUM:-LOW:-SSLv2:-EXP
-
-        SSLCertificateFile      /var/lib/puppet/ssl/certs/${puppet_server_fqdn_lowercase}.pem
-        SSLCertificateKeyFile   /var/lib/puppet/ssl/private_keys/${puppet_server_fqdn_lowercase}.pem
-        SSLCertificateChainFile /var/lib/puppet/ssl/ca/ca_crt.pem
-        SSLCACertificateFile    /var/lib/puppet/ssl/ca/ca_crt.pem
-        # If Apache complains about invalid signatures on the CRL, you can try disabling
-        # CRL checking by commenting the next line, but this is not recommended.
-        SSLCARevocationFile     /var/lib/puppet/ssl/ca/ca_crl.pem
-        SSLVerifyClient optional
-        SSLVerifyDepth  1
-        SSLOptions +StdEnvVars
-
-        # This header needs to be set if using a loadbalancer or proxy
-        RequestHeader unset X-Forwarded-For
-
-        RequestHeader set X-SSL-Subject %{SSL_CLIENT_S_DN}e
-        RequestHeader set X-Client-DN %{SSL_CLIENT_S_DN}e
-        RequestHeader set X-Client-Verify %{SSL_CLIENT_VERIFY}e
-
-        DocumentRoot /usr/share/puppet/rack/puppetmasterd/public
-        RackBaseURI /
-        <Directory /usr/share/puppet/rack/puppetmasterd/>
-                Options None
-                AllowOverride None
-                Order allow,deny
-                allow from all
-        </Directory>
-</VirtualHost>
-DELIM
-  # tell rack how to spawn puppet master processes
-  if [[ ! -d /usr/share/puppet/rack/puppetmasterd ]]; then
-    execute "mkdir -p /usr/share/puppet/rack/puppetmasterd/{public,tmp}"
-    if [[ ! -f /usr/share/puppet/rack/puppetmasterd/config.ru ]]; then
-      # execute "cd /usr/share/puppet/rack/puppetmasterd/ && curl -O https://raw.githubusercontent.com/puppetlabs/puppet/master/ext/rack/config.ru"
-      # TODO: this is a quick hack to fix the config.ru anyhow make sure we properly replace the configuration elements in the below file using `puppet config print [optionname]`
-      cat > /usr/share/puppet/rack/puppetmasterd/config.ru <<\DELIM
-# a config.ru, for use with every rack-compatible webserver.
-# SSL needs to be handled outside this, though.
-
-# if puppet is not in your RUBYLIB:
-# $LOAD_PATH.unshift('/opt/puppet/lib')
-
-$0 = "master"
-
-# if you want debugging:
-# ARGV << "--debug"
-
-ARGV << "--rack"
-
-# Rack applications typically don't start as root.  Set --confdir, --vardir,
-# --logdir, --rundir to prevent reading configuration from
-# ~/ based pathing.
-ARGV << "--confdir" << "/etc/puppet"
-ARGV << "--vardir"  << "/var/lib/puppet"
-ARGV << "--logdir"  << "/var/log/puppet"
-ARGV << "--rundir"  << "/var/run/puppet"
-
-# always_cache_features is a performance improvement and safe for a master to
-# apply. This is intended to allow agents to recognize new features that may be
-# delivered during catalog compilation.
-ARGV << "--always_cache_features"
-
-# NOTE: it's unfortunate that we have to use the "CommandLine" class
-#  here to launch the app, but it contains some initialization logic
-#  (such as triggering the parsing of the config file) that is very
-#  important.  We should do something less nasty here when we've
-#  gotten our API and settings initialization logic cleaned up.
-#
-# Also note that the "$0 = master" line up near the top here is
-#  the magic that allows the CommandLine class to know that it's
-#  supposed to be running master.
-#
-# --cprice 2012-05-22
-
-require 'puppet/util/command_line'
-# we're usually running inside a Rack::Builder.new {} block,
-# therefore we need to call run *here*.
-run Puppet::Util::CommandLine.new.execute
-
-DELIM
-      execute "chown puppet:puppet /usr/share/puppet/rack/puppetmasterd/config.ru"
-    fi
-  fi
-  print_info "Restarting apache to reload config..."
-  case "$os" in
-    centos|redhat)
-      execute "service httpd restart"
-      ;;
-    ubuntu)
-      execute "a2ensite puppetmasterd"
-      execute "service apache2 restart"
-      ;;
-  esac
-}
-
-function check_passenger_status () {
-  execute "netstat -plunt | grep 8140"
-  if [[ $? -eq 0 ]]; then
-    print_info "Puppet server is running through passenger..."
-  else
-    print_error "Puppet server failed starting using passenger. Exiting"
-    exit 1
   fi
 }
 
@@ -780,14 +653,13 @@ function install_puppetdb () {
 
 function configure_puppetdb () {
   local puppetdb_default
-  local puppet_server_fqdn
-  puppet_server_fqdn=$(hostname --fqdn)
+  local puppet_server_fqdn=$(hostname --fqdn)
   case "$os" in
     centos|redhat)
       puppetdb_default="/etc/sysconfig/puppetdb"
       ;;
     ubuntu)
-      puppetdb_default="/etc/default/puppetd"
+      puppetdb_default="/etc/default/puppetdb"
       ;;
     *)
       print_error "$os is not supported yet."
@@ -798,11 +670,14 @@ function configure_puppetdb () {
 JAVA_BIN="/usr/bin/java"
 JAVA_ARGS="${puppetdb_jvm_size} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/var/log/puppetdb/puppetdb-oom.hprof "
 USER="puppetdb"
-INSTALL_DIR="/usr/share/puppetdb"
-CONFIG="/etc/puppetdb/conf.d"
+GROUP="puppetdb"
+INSTALL_DIR="/opt/puppetlabs/server/apps/puppetdb"
+CONFIG="/etc/puppetlabs/puppetdb/conf.d"
+BOOTSTRAP_CONFIG="/etc/puppetlabs/puppetdb/bootstrap.cfg"
+SERVICE_STOP_RETRIES=60
 PUPPETDBDELIM
 
-  cat > /etc/puppetdb/conf.d/database.ini <<PUPPETDBDELIM
+  cat > /etc/puppetlabs/puppetdb/conf.d/database.ini <<PUPPETDBDELIM
 [database]
 classname = org.postgresql.Driver
 subprotocol = postgresql
@@ -813,36 +688,32 @@ password = ${postgresql_password}
 log-slow-statements = 10
 PUPPETDBDELIM
 
-  # configure Jetty to listen on 8085 and ssl on 8086
-  sed -i s/port\ =\ 8080/port\ =\ 8085/g  /etc/puppetdb/conf.d/jetty.ini
-  sed -i s/ssl-port\ =\ 8081/ssl-port\ =\ 8086/g  /etc/puppetdb/conf.d/jetty.ini
-
   # install plugin to connect puppet master to puppetdb
-  cat > /etc/puppet/puppetdb.conf <<DELIM
+  cat > /etc/puppetlabs/puppet/puppetdb.conf <<DELIM
 [main]
-server = $puppet_server_fqdn
-port = 8086
+server_urls = https://${puppet_server_fqdn}:8081
 DELIM
-  execute "grep 'storeconfigs = true' /etc/puppet/puppet.conf"
+  execute "grep 'storeconfigs = true' /etc/puppetlabs/puppet/puppet.conf"
   if [[ $? -ne 0 ]]; then
-    echo "  storeconfigs = true" >> /etc/puppet/puppet.conf
+    echo "storeconfigs = true" >> /etc/puppetlabs/puppet/puppet.conf
   fi
-  execute "grep 'storeconfigs_backend = puppetdb' /etc/puppet/puppet.conf"
+  execute "grep 'storeconfigs_backend = puppetdb' /etc/puppetlabs/puppet/puppet.conf"
   if [[ $? -ne 0 ]]; then
-    echo "  storeconfigs_backend = puppetdb" >> /etc/puppet/puppet.conf
+    echo "storeconfigs_backend = puppetdb" >> /etc/puppetlabs/puppet/puppet.conf
+  fi
+  execute "grep 'reports = store,puppetdb' /etc/puppetlabs/puppet/puppet.conf"
+  if [[ $? -ne 0 ]]; then
+    echo "reports = store,puppetdb" >> /etc/puppetlabs/puppet/puppet.conf
   fi
 
   # make PuppetDB the authoritative source for the inventory service.
-  cat > /etc/puppet/routes.yaml <<\DELIM
+  cat > /etc/puppetlabs/puppet/routes.yaml <<\DELIM
 ---
 master:
  facts:
   terminus: puppetdb
   cache: yaml
 DELIM
-
-  # puppetdb ssl configuration script
-  execute "puppetdb-ssl-setup"
 }
 
 function start_puppetdb () {
@@ -864,7 +735,7 @@ function pause_till_puppetdb_starts () {
   print_info "Waiting till puppetdb start's up (timeout in 60 seconds)"
   timeout 60s bash -c '
 while : ; do
- grep "Started ServerConnector@" /var/log/puppetdb/puppetdb.log &>/dev/null && break
+ grep "PuppetDB finished starting" /var/log/puppetlabs/puppetdb/puppetdb.log &>/dev/null && break
  printf .
  sleep 1
 done
@@ -886,7 +757,7 @@ declare puppet_server_setup
 declare puppet_client_setup
 declare puppetdb_setup
 declare passenger_setup
-declare autosigning_enabled
+declare auto_signing_enabled
 declare puppetdb_jvm_size
 declare postgresql_password
 declare puppet_server_hostname
@@ -898,26 +769,25 @@ function usage () {
   script=$0
   cat <<USAGE
 Syntax
-$(basename "$script") -s -c -d -p -a -j -J {-Xmx512m|-Xmx256m} -P {psql_password} -H {ps_hostname} -h
+$(basename "$script") -s -c -d -a -j -J {-Xmx512m|-Xmx256m} -P {psql_password} -H {ps_hostname} -h
 
 -s: puppet server setup
 -c: puppet client setup
--d: setup puppetdb for stored configurations
--p: install and configure passenger which runs puppet master as a rack application inside apache
+-d: setup puppetdb for stored configurations and reports
 -a: set up auto signing for the same clients belonging to same domain
--j: set up cron job for running puppet agent every 30 minutes
+-j: set up cron job for running puppet agent every 30 minutes otherwise starts puppet agent as service
 -w: wait till puppetdb starts
 -J: JVM Heap Size for puppetdb
--P: postgresql password for puppetdb|postgres user
--H: puppet server hostname (required for client setup)
+-P: postgresql password for puppetdb|postgres user (default: puppetdb)
+-H: puppet server hostname (required for agents setup)
 -v: verbose output
 -h: show help
 
 Examples:
 Install puppet server with all defaults:
 $(basename "$script") -s
-Install puppet server with puppetdb and passenger:
-$(basename "$script") -s -p -d
+Install puppet server with puppetdb for stored configurations and reports:
+$(basename "$script") -s -d
 Install puppet client:
 $(basename "$script") -c -H {puppet_server_hostname}
 
@@ -929,7 +799,7 @@ function check_variables () {
   print_info "Checking command line & user-defined variables for any errors..."
 
   if [[ "$puppet_client_setup" = "true" ]]; then
-    if [[ -z $puppet_server_hostname ]]; then
+    if [[ -z ${puppet_server_hostname} ]]; then
       print_error "Option puppet client setup (-c) requires to pass puppet server hostname using (-H)"
       echo
       usage
@@ -937,13 +807,13 @@ function check_variables () {
     fi
   fi
   if [[ "$puppetdb_setup" = "true" ]]; then
-    if [[ -z $puppetdb_jvm_size ]]; then
+    if [[ -z ${puppetdb_jvm_size} ]]; then
       print_warning "PuppetDB JVM size not set, default value of '-Xmx192m' will be used"
       puppetdb_jvm_size="-Xmx192m"
     fi
-    if [[ -z $postgresql_password ]]; then
-      print_warning "Postgresql password for puppetdb user not set, default value of 'Change3E' will be used"
-      postgresql_password="Change3E"
+    if [[ -z ${postgresql_password} ]]; then
+      print_warning "Postgresql password for puppetdb user not set, default value of 'puppetdb' will be used"
+      postgresql_password="puppetdb"
     fi
   fi
 }
@@ -955,7 +825,7 @@ function main () {
   trap "kill 0" SIGINT SIGTERM EXIT
 
   # parse command line options
-  while getopts J:P:H:scdpajvwfh opts
+  while getopts J:P:H:scdajvwfh opts
   do
     case $opts in
       s)
@@ -967,11 +837,8 @@ function main () {
       d)
         puppetdb_setup="true"
         ;;
-      p)
-        passenger_setup="true"
-        ;;
       a)
-        autosigning_enabled="true"
+        auto_signing_enabled="true"
         ;;
       j)
         setup_puppet_cron_job="true"
@@ -1013,16 +880,10 @@ function main () {
   if [[ "$puppet_server_setup" = "true" ]]; then
     install_puppet_server
     configure_puppet_server
-    if [[ "$autosigning_enabled" = "true" ]]; then
+    if [[ "$auto_signing_enabled" = "true" ]]; then
       configure_autosign_certificates
     fi
     start_puppet_server
-    if [[ "$passenger_setup" = "true" ]]; then
-      stop_puppet_server
-      install_passenger
-      configure_passenger
-      check_passenger_status
-    fi
     if [[ "$puppetdb_setup" = "true" ]]; then
         install_postgres
         configure_postgres
@@ -1034,12 +895,16 @@ function main () {
         if [[ "$wait_for_puppetdb" = "true" ]]; then
           pause_till_puppetdb_starts
         fi
+        stop_puppet_server
+        start_puppet_server
     fi
     test_puppet_run
   elif [[ "$puppet_client_setup" = "true" ]]; then
     install_puppet_client
     configure_puppet_client
     if [[ "$setup_puppet_cron_job" = "true" ]]; then
+      setup_puppet_client_cron_job
+    else
       start_puppet_client
     fi
   else
